update: accent color on email.

--- a/web/templates/verify_email.html
+++ b/web/templates/verify_email.html
@@ -28,7 +28,7 @@
               line-height: 100%;
               border-spacing: 0;
               height: 9px;
-              background: #0097b2;
+              background: #279d47;
               border-radius: 4px 0px 0px 0px;
               border-collapse: collapse;
             "
