--- a/web/templates/reset_password.html
+++ b/web/templates/reset_password.html
@@ -28,7 +28,7 @@
               line-height: 100%;
               border-spacing: 0;
               height: 9px;
-              background: #0097b2;
+              background: #279d47;
               border-radius: 4px 0px 0px 0px;
               border-collapse: collapse;
             "
@@ -142,7 +142,7 @@
                 margin-bottom: 36px;
                 width: 100%;
                 max-width: 380px !important;
-                background-color: #0097b2;
+                background-color: #279d47;
                 border-radius: 4px;
                 display: inline-block;
                 font-weight: 700;
@@ -177,7 +177,7 @@
               >If the button isn't functioning, you can also reset your
               password by visiting the following link:</span
             ><br /><br />
-            <a href="{{.Url}}" target="_blank" style="color: #0097b2"
+            <a href="{{.Url}}" target="_blank" style="color: #279d47"
               >Change My Password</a
             >
             <br><br>
