--- a/web/templates/verify_email.html
+++ b/web/templates/verify_email.html
@@ -61,7 +61,7 @@
                 outline: none;
                 text-decoration: none;
                 width: 157.14px !important;
-                height: 30px;
+                height: auto;
               "
               class="email-logo"
               data-bit="iit"
