--- a/web/templates/reset_password.html
+++ b/web/templates/reset_password.html
@@ -136,7 +136,7 @@
             account. To reset your password, please click the button
             below:
             <a
-              href="{{.Url}}"
+              href="{{.LinkUrl}}"
               style="
                 margin-top: 36px;
                 margin-bottom: 36px;
@@ -177,7 +177,7 @@
               >If the button isn't functioning, you can also reset your
               password by visiting the following link:</span
             ><br /><br />
-            <a href="{{.Url}}" target="_blank" style="color: #279d47"
+            <a href="{{.LinkUrl}}" target="_blank" style="color: #279d47"
               >Change My Password</a
             >
             <br><br>
